Добавлен проект логики

--- a/ContactsAppUI/ContactsAppUI.csproj
+++ b/ContactsAppUI/ContactsAppUI.csproj
@@ -76,5 +76,11 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\ContactsApp\ContactsApp.csproj">
+      <Project>{191cb937-c1e6-49b5-b194-ee6c94a54e1f}</Project>
+      <Name>ContactsApp</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
