--- a/ContactsAppUI/ContactsAppUI.csproj
+++ b/ContactsAppUI/ContactsAppUI.csproj
@@ -49,14 +49,35 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Form1.cs">
+    <Compile Include="AboutProgramForm.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Form1.Designer.cs">
-      <DependentUpon>Form1.cs</DependentUpon>
+    <Compile Include="AboutProgramForm.Designer.cs">
+      <DependentUpon>AboutProgramForm.cs</DependentUpon>
+    </Compile>
+    <Compile Include="ContactsAppForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="ContactsAppForm.Designer.cs">
+      <DependentUpon>ContactsAppForm.cs</DependentUpon>
+    </Compile>
+    <Compile Include="AddEditContactForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="AddEditContactForm.Designer.cs">
+      <DependentUpon>AddEditContactForm.cs</DependentUpon>
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <EmbeddedResource Include="AboutProgramForm.resx">
+      <DependentUpon>AboutProgramForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="AddEditContactForm.resx">
+      <DependentUpon>AddEditContactForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="ContactsAppForm.resx">
+      <DependentUpon>ContactsAppForm.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
@@ -65,6 +86,7 @@
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
+      <DesignTime>True</DesignTime>
     </Compile>
     <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
@@ -85,6 +107,15 @@
       <Project>{191cb937-c1e6-49b5-b194-ee6c94a54e1f}</Project>
       <Name>ContactsApp</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\plus_4315609.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\icons8-ручка-48.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\trash-bin_5577661.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
